<resources>
    <string name="app_name">Money GO</string>
    <string name="total_grand">Overall:</string>
    <string name="total_on_page">Total on this page:</string>
    <string name="total_on_page_converted">Total converted to default currency</string>
    <string name="total_operations">Total operations on this page:</string>
    <string name="hint_cash">Cash, Job, Fastfood etc.</string>
    <string name="hint_start_amount">Starting amount</string>
    <string name="hint_correction_amount">Correction</string>
    <string name="hint_goal_amount">Limit/Goal</string>
    <string name="hint_limit">Limit</string>
    <string name="hint_goal">Goal</string>
    <string name="hint_photo_button">Take Photo</string>
    <string name="hint_remove_photo_button">Remove Photo</string>
    <string name="hint_limit_button">Set limit</string>
    <string name="hint_goal_button">Set goal</string>
    <string name="hint_current_amount">Current Amount</string>
    <string name="hint_pin">ENTER PIN</string>
    <string name="hint_description">ENTER DESCRIPTION</string>
    <string name="tutorial">Tutorial</string>
    <string name="next">Next</string>
    <string name="hint_description_exchange">Currency Exchange:</string>
    <string name="title_choose_currencies">Choose currencies</string>
    <string name="title_choose_default_currency">Choose default currency</string>
    <string name="title_choose_default_currency_fix">There are some operations without currencies. Do you want to set the default currency for these operations?</string>
    <string name="title_choose_direction">Choose direction</string>
    <string name="hint_amount">Amount</string>
    <string name="new_page">New\nPage</string>
    <string name="wrong_password">Wrong password</string>
    <string name="register_failed">Failed to register</string>
    <string name="reset_password_failed">Failed to reset password</string>
    <string name="successfully_reset_password">Please, check your email to reset password</string>
    <string name="successfully_changed_password">Password is changed successfully</string>
    <string name="reset_password">Reset password</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="action_sign_out">Sign out</string>
    <string name="licence_expires">License expires on</string>
    <string name="buy_1m">Buy one month</string>
    <string name="buy_1y">Buy one year</string>
    <string name="claim_1m">Get one FREE month</string>
    <string name="claim_3m">Get three FREE months</string>
    <string name="getFilesFromCloud">Get files from cloud</string>
    <string name="today">Today</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="filter_all">ALL</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="saved">Saved</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fixing_operations">Fixing operations...</string>
    <string name="you_have">Balance: </string>
    <string name="and">, and</string>
    <string name="done">Done!</string>
    <string name="filter_text">Search Text</string>
    <string name="filter_reset">Clear Filter</string>
    <string name="filter">Filter</string>
    <string name="transfer">Transfer</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="convert">Convert</string>
    <string name="enter_amount">Enter amount</string>
    <string name="new_operation">New operation</string>
    <string name="edit_operation">Edit operation</string>
    <string name="subscription_expired">Sorry, your subscription is expired...</string>
    <string name="change_password">Change your password</string>
    <string name="change_password_new1">Enter new password</string>
    <string name="change_password_new2">Repeat password</string>
    <string name="change_password_not_match">Passwords do not match</string>
    <string name="thank_you">Purchase complete!!! Thank you!</string>
    <string name="file">File...</string>
    <string name="openFile">Open…</string>
    <string name="openFileShared">Open Shared…</string>
    <string name="copyOfflineFile">Copy from offline…</string>
    <string name="newFile">New…</string>
    <string name="deleteFile">Delete…</string>
    <string name="copyFile">Save as…</string>
    <string name="shareFile">Share...</string>
    <string name="shareFileXML">Export to XML</string>
    <string name="shareFileOfflineForbidden">Only online files may be shared</string>
    <string name="enterEmails">Enter e-mails (test@gmail.com,test1@outlook.com,...)</string>
    <string name="emailBodyXML">This file can be easily opened with Microsoft Excel, Internet Explorer, Microsoft Edge or any other XML Viewer. Thanks for using Money GO application!</string>
    <string name="cloudLogin">Cloud…</string>
    <string name="settings">Settings…</string>
    <string name="userManual">User Manual</string>
    <string name="exportToPDF">Export to PDF</string>
    <string name="Currencies">Currencies</string>
    <string name="cloudLogout">Log out</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_piano">Piano</string>
    <string name="action_rate">Rate app...</string>
    <string name="action_share_app">Recommend app...</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="size">Size</string>
    <string name="icon">Icon</string>
    <string name="statistics">Stats</string>
    <string name="operations">Operations</string>
    <string name="via">Via:</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">Aug</string>
    <string name="september">Sept</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="offline">Offline</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_reset_password">Reset password</string>
    <string name="action_change_password">Change password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main" translatable="false">Money GO</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_low_res">Low resolution icons</string>
    <string name="use_template">Use a template</string>
    <string name="pref_description_low_res">Use low resolution icons to save memory and speed up graphics</string>
    <string name="pref_auto_circle_size">Resize circles depending on amounts</string>
    <string name="pref_title_auto_circle_size">Auto resize circles</string>
    <string name="pref_show_circle_name">Show circle names under icons on main screen</string>
    <string name="pref_show_circle_amount">Show circle amounts above icons on main screen</string>
    <string name="pref_show_circle_amount_trans">Show amounts in a transparent box</string>
    <string name="pref_show_operation_arrow">Show arrows</string>
    <string name="pref_title_show_operation_arrow">Show arrows for operations</string>
    <string name="pref_show_operation_animation">Animate operations</string>
    <string name="pref_title_show_operation_animation">Animate new operations</string>
    <string name="pref_show_operation_arrow_amount">Show amounts for arrows</string>
    <string name="pref_title_show_operation_arrow_amount">Show amounts for operations</string>
    <string name="pref_title_prevent_create">Prevent new circles</string>
    <string name="pref_title_prevent_color_icons">Hide colour icons</string>
    <string name="pref_title_ask_time">Ask time</string>
    <string name="pref_prevent_create">Prevent creating new circles by holding on empty space. Helps with accidental creation on slow devices.</string>
    <string name="pref_prevent_color_icons">Hide color icons from the menu</string>
    <string name="pref_ask_time">Ask time when selecting date</string>
    <string name="pref_color_top">Background top color</string>
    <string name="pref_color_bar">Bar color</string>
    <string name="pref_color_bottom">Background bottom color</string>
    <string name="pref_color_accent">Accent color</string>
    <string name="pref_color_arrow">Arrows color</string>
    <string name="pref_color_font">Font color</string>
    <string name="pref_title_prevent_move">Prevent circles moving</string>
    <string name="pref_autofill_amount">Fill in the last amount and description for new operations</string>
    <string name="pref_title_autofill_amount">Autofill amount and description</string>
    <string name="pref_prevent_move">Prevent moving circles by holding on circles. Helps with accidental moving instead of new operation.</string>
    <string name="pref_title_show_circle_name">Show circle names</string>
    <string name="pref_title_show_circle_amount">Show circle amounts</string>
    <string name="pref_title_show_circle_amount_trans">Transparent amount</string>
    <string name="pref_title_related_arrows">Show arrows only for selected circle</string>
    <string name="pref_related_arrows">Show only arrows related to the selected circle - both incomes and expenses</string>
    <string name="pref_title_display_name">Currency name</string>
    <string name="pref_title_pin_code">Pin Code</string>
    <string name="pref_default_display_name">$</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="share_add_new_user">Add new user</string>
    <string name="share_all_circles">Full access to all circles</string>
    <string name="share_no_access">NO ACCESS</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_circles">Circles</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_sounds">Sounds</string>
    <string name="pref_title_ringtone">Sound</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>