<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->


    <SwitchPreference
        android:defaultValue="true"
        android:key="show_circle_name"
        android:summary="@string/pref_show_circle_name"
        android:title="@string/pref_title_show_circle_name" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="show_circle_amount"
        android:summary="@string/pref_show_circle_amount"
        android:title="@string/pref_title_show_circle_amount" />


    <SwitchPreference
        android:defaultValue="false"
        android:key="circle_size_auto"
        android:summary="@string/pref_auto_circle_size"
        android:title="@string/pref_title_auto_circle_size" />

    <com.rarepebble.colorpicker.ColorPreference
        android:key="backColorBar"
        android:title="@string/pref_color_bar"
        android:defaultValue="#00B9FF"
        app:colorpicker_showAlpha = "false"
        app:colorpicker_selectNoneButtonText = "RESET"
        />

    <com.rarepebble.colorpicker.ColorPreference
        android:key="backColorTop"
        android:title="@string/pref_color_top"
        android:defaultValue="#00B9FF"
        app:colorpicker_showAlpha = "false"
        app:colorpicker_selectNoneButtonText = "RESET"
        />

    <com.rarepebble.colorpicker.ColorPreference
        android:key="backColorBottom"
        android:title="@string/pref_color_bottom"
        android:defaultValue="#CB429D"
        app:colorpicker_showAlpha = "false"
        app:colorpicker_selectNoneButtonText = "RESET"
        />

    <com.rarepebble.colorpicker.ColorPreference
        android:key="backColorAccent"
        android:title="@string/pref_color_accent"
        android:defaultValue="#CB429D"
        app:colorpicker_showAlpha = "false"
        app:colorpicker_selectNoneButtonText = "RESET"
        />


    <com.rarepebble.colorpicker.ColorPreference
        android:key="backColorArrow"
        android:title="@string/pref_color_arrow"
        android:defaultValue="#0066FF"
        app:colorpicker_showAlpha = "false"
        app:colorpicker_selectNoneButtonText = "RESET"
        />


    <com.rarepebble.colorpicker.ColorPreference
        android:key="backColorFont"
        android:title="@string/pref_color_font"
        android:defaultValue="#FFFFFF"
        app:colorpicker_showAlpha = "false"
        app:colorpicker_selectNoneButtonText = "RESET"
        />


    <SwitchPreference
        android:defaultValue="true"
        android:key="show_operation_arrow"
        android:summary="@string/pref_show_operation_arrow"
        android:title="@string/pref_title_show_operation_arrow" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="show_operation_arrow"
        android:key="show_arrow_only_related"
        android:summary="@string/pref_related_arrows"
        android:title="@string/pref_title_related_arrows" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_operation_arrow_amount"
        android:dependency="show_operation_arrow"
        android:summary="@string/pref_show_operation_arrow_amount"
        android:title="@string/pref_title_show_operation_arrow_amount" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="show_operation_animation"
        android:summary="@string/pref_show_operation_animation"
        android:title="@string/pref_title_show_operation_animation" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="sounds"
        android:title="@string/pref_sounds" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="sounds"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
